resolve update payment

--- a/FrontEnd/admin.html
+++ b/FrontEnd/admin.html
@@ -151,7 +151,7 @@
                             "Content-Type": "application/json",
                         },
                         body: JSON.stringify({
-                            date: this.input.date,
+                            payment_date: this.input.date,
                             status
                         })
                     })
